--- a/GithubDemo/Base.lproj/Main.storyboard
+++ b/GithubDemo/Base.lproj/Main.storyboard
@@ -1,28 +1,133 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kcP-vE-O7S">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="kcP-vE-O7S">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Repo Results View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="RepoResultsViewController" customModule="GithubDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="vXZ-lx-hvc" customClass="RepoResultsViewController" customModule="GithubDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="125" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bFS-pp-QqF">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RepoResultCell" rowHeight="130" id="6YB-zp-xSu" customClass="RepoTableViewCell" customModule="GithubDemo" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="130"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6YB-zp-xSu" id="2bt-fW-XHE">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="130"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="754" text="Repo Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nNt-L2-mrf">
+                                                    <rect key="frame" x="80" y="8" width="287" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XkR-WP-o9a">
+                                                    <rect key="frame" x="8" y="8" width="64" height="64"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="64" id="7XC-NT-Nvr"/>
+                                                        <constraint firstAttribute="width" constant="64" id="ZiF-rp-nFS"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ep2-DV-xbJ">
+                                                    <rect key="frame" x="80" y="31" width="44" height="17"/>
+                                                    <attributedString key="attributedText">
+                                                        <fragment content="Author">
+                                                            <attributes>
+                                                                <font key="NSFont" metaFont="menu" size="14"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                    </attributedString>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleAspectFit" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="7kI-Vb-vC2">
+                                                    <rect key="frame" x="80" y="102" width="21" height="24"/>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleAspectFit" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" image="fork" translatesAutoresizingMaskIntoConstraints="NO" id="xIv-tH-OgH">
+                                                    <rect key="frame" x="307" y="102" width="18" height="24"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Forks" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5zP-UJ-RaW">
+                                                    <rect key="frame" x="333" y="106" width="34" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" preservesSuperviewLayoutMargins="YES" text="Stars" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D3t-DZ-QdE">
+                                                    <rect key="frame" x="109" y="106" width="32" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Repo description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3kO-vs-NYW">
+                                                    <rect key="frame" x="80" y="56" width="287" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="XkR-WP-o9a" firstAttribute="top" secondItem="2bt-fW-XHE" secondAttribute="topMargin" id="4Ca-oA-JA5"/>
+                                                <constraint firstItem="3kO-vs-NYW" firstAttribute="trailing" secondItem="2bt-fW-XHE" secondAttribute="trailingMargin" id="4Ge-Of-hMD"/>
+                                                <constraint firstItem="5zP-UJ-RaW" firstAttribute="leading" secondItem="xIv-tH-OgH" secondAttribute="trailing" constant="8" id="8Ok-h3-iCd"/>
+                                                <constraint firstAttribute="bottom" secondItem="xIv-tH-OgH" secondAttribute="bottom" constant="4" id="9Ot-m7-Y4j"/>
+                                                <constraint firstItem="3kO-vs-NYW" firstAttribute="leading" secondItem="XkR-WP-o9a" secondAttribute="trailing" constant="8" id="BDw-37-tS1"/>
+                                                <constraint firstItem="D3t-DZ-QdE" firstAttribute="leading" secondItem="7kI-Vb-vC2" secondAttribute="trailing" constant="8" id="FY8-Qd-Brc"/>
+                                                <constraint firstAttribute="bottom" secondItem="7kI-Vb-vC2" secondAttribute="bottom" constant="4" id="I32-mB-3HF"/>
+                                                <constraint firstItem="xIv-tH-OgH" firstAttribute="top" relation="greaterThanOrEqual" secondItem="3kO-vs-NYW" secondAttribute="bottom" constant="15" id="MBf-wt-xhw"/>
+                                                <constraint firstItem="nNt-L2-mrf" firstAttribute="leading" secondItem="XkR-WP-o9a" secondAttribute="trailing" constant="8" id="OG2-UX-RgJ"/>
+                                                <constraint firstItem="3kO-vs-NYW" firstAttribute="top" secondItem="Ep2-DV-xbJ" secondAttribute="bottom" constant="8" id="TgT-rG-e0V"/>
+                                                <constraint firstItem="nNt-L2-mrf" firstAttribute="trailing" secondItem="2bt-fW-XHE" secondAttribute="trailingMargin" id="U3b-Zr-XBm"/>
+                                                <constraint firstItem="xIv-tH-OgH" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="D3t-DZ-QdE" secondAttribute="trailing" constant="150" id="VEZ-gc-0kE"/>
+                                                <constraint firstItem="nNt-L2-mrf" firstAttribute="top" secondItem="2bt-fW-XHE" secondAttribute="topMargin" id="beJ-GS-BfQ"/>
+                                                <constraint firstItem="Ep2-DV-xbJ" firstAttribute="leading" secondItem="XkR-WP-o9a" secondAttribute="trailing" constant="8" id="d7X-sA-eVE"/>
+                                                <constraint firstItem="Ep2-DV-xbJ" firstAttribute="top" secondItem="nNt-L2-mrf" secondAttribute="bottom" constant="2" id="g0v-pZ-TNX"/>
+                                                <constraint firstItem="XkR-WP-o9a" firstAttribute="leading" secondItem="2bt-fW-XHE" secondAttribute="leadingMargin" id="nsj-Zg-877"/>
+                                                <constraint firstItem="7kI-Vb-vC2" firstAttribute="leading" secondItem="2bt-fW-XHE" secondAttribute="leading" constant="80" id="pPg-di-fX3"/>
+                                                <constraint firstItem="5zP-UJ-RaW" firstAttribute="trailing" secondItem="2bt-fW-XHE" secondAttribute="trailingMargin" id="vaw-Cr-Lpz"/>
+                                                <constraint firstItem="5zP-UJ-RaW" firstAttribute="bottom" secondItem="2bt-fW-XHE" secondAttribute="bottomMargin" id="xEV-vd-0Nv"/>
+                                                <constraint firstItem="D3t-DZ-QdE" firstAttribute="bottom" secondItem="2bt-fW-XHE" secondAttribute="bottomMargin" id="xXY-1Z-ATb"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="authorLabel" destination="Ep2-DV-xbJ" id="yAG-Jf-FZx"/>
+                                            <outlet property="avatarView" destination="XkR-WP-o9a" id="Cez-bY-WNQ"/>
+                                            <outlet property="forksLabel" destination="5zP-UJ-RaW" id="wOO-RP-k7G"/>
+                                            <outlet property="repoDescLabel" destination="3kO-vs-NYW" id="CTs-dC-awv"/>
+                                            <outlet property="repoNameLabel" destination="nNt-L2-mrf" id="yPQ-Fk-ask"/>
+                                            <outlet property="starsLabel" destination="D3t-DZ-QdE" id="6Ba-IU-Fby"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="x5q-EH-pP8"/>
+                    <connections>
+                        <outlet property="tableView" destination="bFS-pp-QqF" id="jLd-1v-DK4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="819" y="-557"/>
+            <point key="canvasLocation" x="927" y="-557"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="FpP-oR-azb">
@@ -43,4 +148,8 @@
             <point key="canvasLocation" x="132" y="-557"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="fork" width="18" height="24"/>
+        <image name="star" width="21" height="24"/>
+    </resources>
 </document>
